# localdesktop

./: .gitattributes  .gitignore  CRASH_ANALYSIS_REPORT.md  Cargo.toml  README.md  build.rs  crash_analysis.txt  manifest.yaml
.github/workflows/: build-apk.yml  build.yml  google-play-console.yml  rules.yml
.helix/: languages.toml
assets/: archlinux-aarch64-pd-v4.6.0.tar.xz  setup-progress.html
assets/aarch64-linux-android/: proot-rs
patches/build-libxkbcommon/: Dockerfile  build.sh  ndk-crossfile.txt
patches/build-proot-android/: .gitignore  build.sh  config  get-proot.sh  make-proot-for-apk.sh  make-proot.sh
patches/smithay/src/backend/egl/: context.rs  ffi.rs
patches/winit/src/platform_impl/android/: mod.rs
patches/xbuild/apk/src/: manifest.rs
patches/xbuild/xbuild/src/: config.rs  download.rs  task.rs
patches/xbuild/xbuild/src/cargo/: mod.rs
patches/xbuild/xbuild/src/gradle/: build.gradle  ic_launcher.xml  mod.rs
scripts/: crash_analyzer.py  minidump_analyzer.py
src/: android_main.rs  application_context.rs  config.rs  lib.rs  logging.rs  main.rs
src/android/: main.rs
src/android/app/: build.rs  run.rs
src/android/backend/: webview.rs
src/android/backend/wayland/: bind.rs  compositor.rs  event_centralizer.rs  event_handler.rs  mod.rs  winit_backend.rs
src/android/proot/: launch.rs  process.rs  setup.rs
src/android/utils/: application_context.rs  ndk.rs  webview.rs
src/app/: build.rs  compositor.rs  eframe.rs  event_centralizer.rs  event_handler.rs  input.rs  polar_bear.rs  renderer.rs  run.rs  ui.rs  winit.rs
src/app/backend/: webview.rs
src/app/backend/wayland/: compositor.rs  element.rs  event_centralizer.rs  event_handler.rs  mod.rs
src/arch/: mod.rs  process.rs  run.rs  scaffold.rs  setup.rs
src/core/: config.rs  logging.rs
src/proot/: launch.rs  process.rs  scaffold.rs  setup.rs
src/utils/: application_context.rs  config.rs  fullscreen_immersive.rs  logging.rs  ndk.rs  patches.rs  socket.rs  toast.rs  wayland.rs  webview.rs
src/wayland/: compositor.rs  mod.rs  winit_backend.rs
tests/: arch.rs  config.rs  cross.rs
