[package]
name = "localdesktop"
version = "1.2.7"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[target.'cfg(target_os = "android")'.dependencies] # Deps used for Local Desktop
tracing = "0.1.41"
jni = "0.21.1"
mockall = "0.13.1"
android_logger = { version = "0.14", default-features = false }
winit = { version = "0.30.11", features = [
    "android-native-activity",
    "wayland",
] }
wayland-protocols = "0.32.6"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
websocket = { version = "0.27.1", default-features = false, features = [
    "sync",
] }
sentry = { version = "0.41.0", default-features = false, features = [
    "reqwest",
    "rustls",
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "logs",
    "log",
] }
pathdiff = "0.2"
smithay = { version = "0.5.0", default-features = false, features = [
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
    "desktop",
] }

[target.'cfg(not(target_os = "android"))'.dependencies] # Deps used only for setting up cross testing

[dependencies] # Deps used for both target
log = "0.4"
tar = "0.4.43"
xz2 = "0.1.7"
reqwest = { version = "0.12.20", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"

[patch.crates-io]
smithay = { path = "patches/smithay" }
winit = { path = "patches/winit" }
